--- a/jellyfin_docker/docker-compose.yml
+++ b/jellyfin_docker/docker-compose.yml
@@ -1,19 +1,17 @@
-version: "2"
+version: "3"
 services:
   jellyfin:
     image: linuxserver/jellyfin
     container_name: jellyfin
-    network_mode: "host"
     volumes:
       - ./config:/config
       - ./cache:/cache
       - ./media:/media
-      - ./media2:/media2:ro
     ports:
       - 8096:8096     # HTTP WebGUI
-      # - 8920:8920     # HTTPS WebGUI
-      # - 7359:7359/udp # UDP Broadcast
-      # - 1900:1900/udp # DLNA Service Discovery
+      - 8920:8920     # HTTPS WebGUI  [OPTIONAL]
+      - 7359:7359/udp # UDP Broadcast [OPTIONAL]
+      - 1900:1900/udp # DLNA Service Discovery  [OPTIONAL]
     environment:
       - PUID=1000         # UserID 
       - PGID=1000         # GroupID  
