--- a/jellyfin_docker/docker-compose.yml
+++ b/jellyfin_docker/docker-compose.yml
@@ -1,4 +1,4 @@
-version: "3"
+version: "3.4"
 services:
   jellyfin:
     image: linuxserver/jellyfin
@@ -7,11 +7,8 @@ services:
       - ./config:/config
       - ./cache:/cache
       - ./media:/media
-    ports:
-      - 8096:8096     # HTTP WebGUI
-      - 8920:8920     # HTTPS WebGUI  [OPTIONAL]
-      - 7359:7359/udp # UDP Broadcast [OPTIONAL]
-      - 1900:1900/udp # DLNA Service Discovery  [OPTIONAL]
+#    network: host
+    network_mode: "host"
     environment:
       - PUID=1000         # UserID 
       - PGID=1000         # GroupID  
