--- a/.github/workflows/jellyfin_docker_test.yml
+++ b/.github/workflows/jellyfin_docker_test.yml
@@ -8,15 +8,12 @@ jobs:
     steps:
     - name: Checkout Repository
       uses: actions/checkout@v2
-      
-    - name: "Navigate to jellyfin_docker"
-      run: "cd jellyfin_docker"
 
     - name: Docker Setup
       uses: docker-practice/actions-setup-docker@1.0.8
       
     - name: Compose
-      run: "sudo docker-compose up -d"
+      run: "sudo docker-compose -f jellyfin_docker/docker-compose.yml up -d"
 
     - name: "Check if Jellyfin Server did Boot"
       uses: mydea/action-wait-for-api@v1
